dataset1235/2025-2/2868285114/users/3240599857/executions/3071719669_2086141900.log
== SUBMISSION (2025-08-28 22:41:54)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:16)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = (11 * lado* apotema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:43:01)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:18)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:43:03)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:46:05)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:43:01)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:18)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:23)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(11*tan(pi/11))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:34)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/12))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:44:14)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = (11 * lado* apotema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:17)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:47:30)
-- CODE: 
from math import *

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:47:11)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan*(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:45:04)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:54)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:47:10)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan*(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:46:18)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:41:32)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/12))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:47:11)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan*(pi/11))
area = 11 * lado* apotema /2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:42:22)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(11*tan(pi/11))
area = 6 * lado* apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:44:15)
-- CODE: 
from math import 

lado = int(input())
apotema = lado /(2*tan(pi/11))
area = (11 * lado* apotema/2)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 1
    from math import 
                     ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
